[Octave] Some fixes   - Fix problem with comment in multiline octave command   - Fix bug with empty command, which never finish execution

BUG: 401893
FIXED-IN: 19.04